--- a/code/styles.css
+++ b/code/styles.css
@@ -2,48 +2,173 @@
   --pink: #eecae3;
   --brown: #a9826d;
   --green: #84a589;
-  --nav-top: #2a6771;
+  --nav: #2a6771;
+  --b-hover : #0af3e7;
+  --back-color: whitesmoke; 
 }
 
 body {
   padding: 0;
   margin: 0;
+  background-color: var(--back-color);
+  font-family: 'Comfortaa', 'Ubuntu', 'Roboto', sans-serif;
+}
+
+main {
+  margin: 10px 10px 10px 10px;
 }
 
 a {
   text-decoration: none;
+  color: var(--nav);
+  font-weight: 700;
+   cursor: pointer;
 }
+
+
+.list{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.logo-desktop {
+  display: none;
+} 
 
 .nav-links {
-color: white;
+  display: none;
 }
-
-.icon {
-  color: var(--green);
-}
-
-.svg {
-  width: 25px;
-  height: 25px;
+  
+.logo-tablets-and-mobiles {
+  fill: var(--pink);
+  width: 140px;
+  height: 60px;
 }
 
 .top-navicons {
   color: var(--pink);
+  width: 18px;
+  height: 18px;
+}
+
+.navicons-wrapper {
+ margin: 0px 0px 0px 100px;
 }
 
 .navbar {
-  background-color: var(--nav-top);
+  background-color: var(--nav); 
+  padding: 10px 0px 10px 0px;
 }
 
-.list {
+.nav-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.main-banner {
+  width: 100%;
+}
+
+.media-icons {
+  color: var(--nav);
+  width: 25px;
+  height: 25px;
+}
+
+.article-text {
+  font-size: 14px;
+}
+
+.content-spacing {
+  margin: 10px 5px 10px 5px;
+}
+
+.banner-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.list-container {
   list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+}
+
+.news-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 10px;
+}
+
+.news-pics {
+  width: 100%;
+  position: inherit;
+}
+
+.iframes {
+  width: 100%;
+  height: 266px;
+  position: inherit;
+}
+
+/* Subscribe button styles and effects */ 
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.subscribe {
+  outline: 0;
+  cursor: pointer;
+  padding: 5px 16px;
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  vertical-align: middle;
+  border: 1px solid;
+  border-radius: 8px;
+  color: var(--nav);
+  background-color: var(--pink) ;
+  border-color var(--nav);
+  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
+}
+
+.subscribe:hover {
+  background-color:var(--b-hover);
+  border-color: var(--nav);
+  transition-duration: 0.1s;
+}
+
+.signature {
+  font-size: 10px;
+  color: var(--back-color);
+}
+
+/* News boxes styles and animations */
+
+.news-box {
+  border: 1px solid lightgrey;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 /* Styles for Desktop version */
+@media (min-width: 992px) {
+
 .logo-tablets-and-mobiles {
   display: none;
-  color: var(--pink);
-}
+} 
 
 .logo-desktop {
   width: 180px;
@@ -52,12 +177,11 @@ color: white;
   margin: none;
 }
 
-.container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
+.nav-links {
+  color: white;
+  font-size: 5px;
+  }
+  
 
 .news-container {
   display: flex;
@@ -75,11 +199,4 @@ color: white;
 .nav-links {
   margin-right: 50px;
 }
-
-img {
-  width: 560px;
-  height: 315px;
 }
-/* youtube default  */
-/* width="560" */
-/* height="315" */
