--- a/code/style.css
+++ b/code/style.css
@@ -68,7 +68,8 @@ h3 {
 }
 
 .news-snippets-container {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   /*grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));*/
 }
 
