--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,751 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+body {
+  background: rgb(0, 0, 0);
+  margin: 0%;
+  padding: 0%;
+  overflow-x: hidden;
+  height: auto;
 }
+
+
+
+
+.container-nav {
+ 
+  background-color: black;
+  width: 100%;
+  display: grid;
+  margin-left: 1%;
+  grid-template-columns: repeat(12, 0.5fr);
+  grid-column-gap: 0.5%;
+
+}
+
+.container-header {
+ 
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  padding: 5% 0% 0% 0%;
+  display: grid;
+  margin-left: 1%;
+  grid-template-columns: repeat(12, 0.5fr);
+  grid-column-gap: 0.5%;
+  margin-top: 1%;
+ 
+  
+}
+
+
+.container-regular-footer {
+
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  padding: 3% 0% 0 0;
+  display: grid;
+  grid-template-columns: repeat(12, 0.5fr);
+  grid-column-gap: 0.5%;
+  margin: 1% 0% 0 0;
+ justify-content: center;
+ align-content: center;
+  
+  
+}
+
+
+
+
+
+
+
+.nawbar {
+  position: fixed;
+  background-color: rgb(0, 0, 0);
+  grid-row: span 1;
+  grid-column: span 12;
+  height: 8vh;
+  display: flex;
+  width: 100%;
+  z-index: 12;
+  grid-template-columns: repeat(12, 0.5fr);
+  grid-template-rows: repeat(12, 0.5fr);
+  display: grid;
+ 
+}
+
+
+
+
+.navbar-items {
+  grid-column: span 12;
+  grid-row: span 1;
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 6vh;
+  display: flex;
+  margin: 0% 0% 0 -0.5%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#nav-text {
+  font-size: 1.5rem;
+  margin: 1% 0% 0 0%;
+  font-family: "Actor", sans-serif;
+  color: rgb(247, 244, 231);
+  white-space: nowrap;
+  text-shadow: 0 0 0.11rem rgb(0, 0, 0), 0 0 0.4rem rgb(255, 248, 211),
+    0 0 0.5rem rgb(240, 239, 154);
+    animation: flicker 3s infinite alternate;
+}
+
+
+
+@keyframes flicker {
+    
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px rgb(168, 22, 22),
+      0 0 40px rgb(168, 22, 22),
+      0 0 80px rgb(0, 225, 255),
+      0 0 90px rgb(168, 22, 22);
+
+    
+    
+  
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
+}
+
+.navbar-items #nav-img {
+  height: 5vh;
+  margin: 0.8% 0.5% 0 0.5%;
+
+}
+
+
+
+
+
+
+.nawbar-btn {
+  font-family: 'Archivo', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 5px;
+  color: rgb(238, 238, 238);
+  background-color: rgb(0, 0, 0);
+  text-shadow:  0 0 4px #fff,
+  0 0 11px #fff,
+  0 0 19px rgb(168, 22, 22);
+    font-size: 1rem;
+    margin: 1% 5% 0% 5.65%;
+  padding: 0.2% 1.3% 0.3% 1%;
+  white-space: nowrap;
+  transition: 0.1s ease-in;
+  box-shadow:  0 0 4px #fff,
+  0 0 11px #fff,
+  0 0 19px rgb(168, 22, 22);
+
+  
+}
+
+
+
+.nawbar-btn:hover {
+  transform: scale(95%);
+  
+}
+
+
+
+
+
+
+
+
+header {
+  grid-column: span 4;
+  grid-row: span 1;
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+header img {
+  height: 50%;
+  width: 100%;
+  margin-bottom: 0.5%;
+  
+
+}
+
+#video-header {
+  height: 50%;
+  width: 100%;
+}
+
+.big-news {
+  grid-row: span 1;
+  grid-column: span 8;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  margin: -5% 2% 0 2%;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Archivo', sans-serif;
+}
+
+#bignewz-first-h1{
+  font-size: 3rem;
+margin-bottom: -1%;
+color: rgb(255, 255, 255);
+text-shadow: 0 0 4px #fff,
+0 0 9px #fff,
+0 0 15px rgb(168, 22, 22);
+
+
+}
+
+
+.big-news h1 {
+  color:rgb(238, 235, 225);
+  font-size: 3vw;
+  line-height: 120%;
+  margin-right: 1%;
+
+}
+
+.big-news p {
+  color: rgb(247, 244, 231);
+  font-size: 1.5vw;
+  line-height: 150%;
+  margin-top: -2%;
+  margin-right: 1.1%;
+  
+}
+
+.stream-big-btn {
+ 
+  width: 35%;
+  text-decoration: none;
+  font-size: 1.5vw;
+  color: rgb(0, 0, 0);
+  text-shadow: 0 0 0.1rem rgb(27, 17, 17);
+  border: solid 0.1rem rgb(219, 216, 216);
+  background-color: rgb(253, 248, 227);
+  padding: 0.1% 0% 0 1%;
+  margin: 2% 0 1% -10;
+  box-shadow: 0 0 2px #fff,
+  0 0 7px #fff,
+  0 0 15px rgb(168, 22, 22);
+  transition: 0.1s ease-in;
+}
+.stream-big-btn:hover {
+  transform: scale(95%);
+  
+  
+}
+
+
+
+.regular-news-cards {
+  grid-column: span 4;
+  grid-row: span 1;
+  margin: 1%;
+  background-color: rgb(104, 0, 0);
+  padding: 4% 4% 0% 4%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  filter: grayscale(100%);
+  transform: scale(90%);
+  box-shadow: 0 0 4px #fff,
+  0 0 11px #fff,
+  0 0 19px rgb(168, 22, 22);
+  
+
+}
+
+.regular-news-cards:hover {
+  filter: none;
+  background-color: antiquewhite;
+  box-shadow: burlywood;
+  transform: scale(95%);
+}
+ .regular-news-cards img{
+height: 65%;
+
+ }
+
+
+.regular-news-cards h3 {
+  color: rgb(0, 0, 0);
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin: 6% 0% 10% 0%;
+  font-family: "Pangolin", cursive;
+}
+
+
+.stream-regular{
+  text-align: center;
+  width: 25%;
+  text-decoration: none;
+  font-family: 'Archivo', sans-serif;
+  font-size: 0.8rem;
+  color: rgba(0, 0, 0, 0.822);
+  text-shadow: 0 0 0.1rem rgb(12, 12, 8);
+  border: dotted 0.2rem rgb(0, 0, 0);
+  background-color: rgb(223, 206, 184);
+  margin: 3% 0 10% 0%;
+}
+
+.stream-regular:hover {
+  transition: 0.2s ease-in;
+  background-color: rgb(173, 153, 133);
+ 
+}
+
+.footer-div{
+  grid-column: span 12;
+ display: block;
+ background-color: rgb(0, 0, 0);
+ width: 105%;
+ margin-top: 3%;
+ box-shadow:   0 0 2px #fff,
+ 0 0 6px #fff,
+ 0 0 7px rgb(168, 22, 22);
+ 
+ }
+ 
+ #footer-text {
+   font-family: 'Archivo', sans-serif;
+ text-align: center;
+ height: 2vh;
+ color: rgb(149, 149, 149);
+ margin: 0 1%;
+ font-size: 70%;
+ padding-top: 0.5%;
+ text-shadow: 0 0 0.1px #fff,
+ 0 0 0.2px #fff,
+ 0 0 5px rgb(168, 22, 22);
+ }
+ 
+ #footer-text a{
+   color: rgb(149, 149, 149);
+   text-decoration: none;
+ }
+ 
+ #footer-text a:hover{
+ color: rgb(0, 0, 0);
+ 
+ }
+
+
+
+
+@media (min-width: 1024px) and (max-width: 1499px) {
+
+.container-header{
+
+  margin-top: 5%;
+
+}
+
+
+}
+
+@media (min-width: 1500px) and (max-width: 1920px) {
+ 
+ 
+ 
+ 
+ 
+  .nawbar {
+    height: 5vh;
+  
+  }
+
+  .navbar-items {
+    margin: -0.5% 0% 0% -1.5%;
+    
+  }
+ 
+
+  .navbar-items #nav-img {
+    height: 4vh;
+    margin: 0.8% 0.1% 0% 1.3%;
+    opacity: 85%;
+    
+  }
+
+  #nav-text {
+    font-size: 1.7rem;
+    margin: 1.1% 0% 0% -13.5%;
+    white-space: nowrap;
+   
+  }
+
+
+
+ 
+  .nawbar-btn {
+    height: 2.2vh;
+    font-size: 1rem;
+    padding: 0.3% 1% 0.2% 1%;
+    margin: 1% 0.6% 0% 0.4%;
+  }
+
+ 
+
+.big-news {
+  grid-row: span 1;
+  grid-column: span 8;
+  margin: -6% 0% 0 2%;;
+  display: flex;
+  flex-direction: column;
+}
+#bignewz-first-h1{
+  font-size: 5rem;
+margin-bottom: -1%;
+
+}
+
+
+.big-news h1 {
+ 
+  font-size: 2.5vw;
+margin-right: 1%;
+}
+
+.big-news p {
+
+  font-size: 1.4vw;
+  margin-top: -2%;
+  margin-right: 4%;
+  line-height: 150%;
+}
+.stream-big-btn{
+
+width: 33%;
+
+}
+
+
+.regular-news-cards h3 {
+  color: rgb(0, 0, 0);
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 6% 0% 0% 0%;
+  font-family: "Pangolin", cursive;
+}
+
+
+.stream-regular {
+  
+  width: 18%;
+  font-size: 1rem;
+  padding: 1% 0%;
+  margin: 10% 10% 1% 0%;
+}
+
+
+
+
+
+.footer-div{
+ grid-column: span 12;
+display: block;
+background-color: rgb(0, 0, 0);
+width: 105%;
+margin-top: 3%;
+box-shadow:   0 0 2px #fff,
+0 0 6px #fff,
+0 0 7px rgb(168, 22, 22);
+
+}
+
+#footer-text {
+  font-family: 'Archivo', sans-serif;
+text-align: center;
+height: 2vh;
+color: rgb(149, 149, 149);
+margin: 0 1%;
+font-size: 70%;
+
+
+}
+
+
+
+
+
+}
+@media (min-width: 667px) and (max-width: 1023px) {
+ 
+  
+
+  .nawbar {
+    position: fixed;
+    background-color: rgb(0, 0, 0);
+    grid-row: span 1;
+    grid-column: span 12;
+    height: 5vh;
+    padding-left: 1%;
+    margin-left: -0.1%;
+    display: flex;
+    width: 100%;
+    z-index: 12;
+  }
+
+  .navbar-items {
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 4vh;
+    display: flex;
+    margin: 0% 0% 0 -7.9%;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .nawbar-btn {
+    
+    margin: 0 8.5% 0 3.5%;
+  }
+
+
+
+  .navbar-items #nav-img {
+    order: 2;
+    padding: 0 4% 0 0;
+    height: 3.5vh;
+    opacity: 80%;
+  }
+  .navbar-items #nav-button-1 {
+    order: 1;
+  }
+  .navbar-items #nav-button-2 {
+    order: 1;
+  }
+
+  .navbar-items #nav-button-3 {
+    order: 4;
+  }
+
+  .navbar-items #nav-button-4 {
+    order: 4;
+  }
+
+  #nav-text {
+    visibility: hidden;
+  }
+
+  .container-head {
+   
+    padding: 7% 0% 0% 0%; }
+
+  header {
+    grid-row: span 1;
+    grid-column: span 6;
+    width: 100%;
+    height: 100%;
+  }
+
+  header img {
+    height: 50%;
+    width: 100%;
+    margin: 0 -0.1 0 5%;
+  }
+
+  #video-header {
+    height: 50%;
+    width: 100%;
+  }
+
+  .big-news {
+    grid-row: span 1;
+    grid-column: span 6;
+    width: 100%;
+    height: 100%;
+    padding: 10% 0% 0% -10%;
+    margin-left: 2%;
+  }
+
+  #bignewz-first-h1{
+    font-size: 2rem; }
+
+  .big-news h1 {
+    margin-top: 5%;
+    font-size: 1.3rem;
+  }
+
+  .big-news p {
+    font-size: 0.8rem;
+  }
+
+  .stream-big-btn {
+    width: 25vw;
+    margin: 4% 0 0 0%;
+    font-size: 0.8rem;
+  }
+  .regular-news-cards {
+    grid-row: span 1;
+    grid-column: span 6;
+  }
+
+#footer-text{
+padding-bottom: -0.2%;
+
+}
+  
+  }
+
+
+
+
+@media (max-width: 666px) {
+  .container-nav {
+    justify-content: center;
+    align-content: center;
+    margin-left: 5%;
+  }
+  
+
+  .nawbar {
+    position: fixed;
+    background-color: rgb(0, 0, 0);
+    grid-row: span 1;
+    grid-column: span 12;
+    margin-left: -1%;
+    height: 5vh;
+    z-index: 12;
+  }
+
+  .navbar-items {
+    background-color: rgb(0, 0, 0);
+    height: 5vh;
+    display: flexbox;
+    justify-content: flex-start;
+    align-items: flex-start;
+   
+  }
+
+  .nawbar-btn {
+    font-size: 75%;
+    margin: 1% 2% 0 2%;
+  }
+
+  .navbar-items {
+    margin-left: -34%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .navbar-items #nav-img {
+    order: 1;
+    height: 4.1vh;
+    margin-right: 1%;
+    margin-left: -1%;
+    opacity: 80%;
+    
+  }
+  .navbar-items #nav-button-1 {
+    order: 2;
+  }
+  .navbar-items #nav-button-2 {
+    order: 2;
+  }
+
+  .navbar-items #nav-button-3 {
+    order: 3;
+  }
+
+  .navbar-items #nav-button-4 {
+    order: 3;
+  }
+
+  #nav-text {
+    visibility: hidden;
+  }
+
+  .nav-btn {
+    width: 5vw;
+    height: 5vh;
+  }
+
+  header {
+    grid-row: span 1;
+    grid-column: span 12;
+    width: 101%;
+    height: 100vw;
+  }
+
+  
+
+  #video-header {
+    height: 100%;
+    width: 100%;
+  }
+
+  .big-news {
+    grid-row: span 1;
+    grid-column: span 12;
+    width: 100vw;
+    height: 100%;
+    padding: 0% 1% 0% 1%;
+    margin-top: -8%;
+  }
+
+  #bignewz-first-h1{
+  font-size: 2.5rem;
+  margin: 8% 0% 1% 0%;
+ 
+  
+  }
+
+
+  .big-news h1 {
+    margin: 1% 0% 1% 0%;
+    font-size: 90%;
+  }
+
+  .big-news p {
+    margin: 0% 1% 1% 0%;
+
+    font-size: 65%;
+  }
+
+  .stream-big-btn {
+    width: 50vw;
+    margin: 3% 1% 0% 0%;
+    font-size: 0.8rem;
+  }
+  .regular-news-cards {
+    grid-row: span 1;
+    grid-column: span 12;
+  }
+
+
+#footer-text{
+
+  font-size: 0.1%;
+  padding-top: 2%;
+  
+}
+
+
+}
+
+
+
+
