--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,170 @@
 html {
-  background: #0025ff;
+  background: white;
   color: #fff;
+  font-family: 'Roboto Mono', monospace;
 }
+
+.wrapper{
+  justify-content: center;
+  display: flex;
+flex-direction: column;
+}
+
+header{
+display: flex;
+justify-content: space-evenly;
+align-self: center;
+align-items: center;
+flex-direction: row;
+}
+
+.a-nav{
+  color: #383C4B;
+  text-decoration: none;
+}
+
+.meny{
+  /* display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  align-self: flex-end; */
+}
+.menu-line{
+  width: 35px;
+  height: 5px;
+  background-color: #25838A;
+  margin: 6px 0;
+  border-radius: 10px;
+  align-self: flex-end;
+}
+
+.logo{
+  width: 50px;
+  height: 50px;
+  border: 3px solid #25838A;
+  border-radius: 50%;
+  padding: 5px;
+  
+}
+
+.big-news{
+  width: 90%;
+  /* border: 2px solid #25838A; */
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  max-width: 500px;
+
+}
+
+.big-news-image{
+  width: 95%;
+  height: 300px;
+  padding: 1rem;
+  border-radius: 20px;
+  object-fit: cover;
+overflow: hidden;
+
+}
+
+.news-card{
+  width: 90%;
+  max-width: 500px;
+  border: 2px solid #F2F2F2;
+  /* box-shadow: 5px 5px 5px #25838A; */
+  border-radius: 10px;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+.news-card:hover{
+  box-shadow: 5px 5px 5px #25838A;
+}
+
+.news-card-image{
+  width: 95%;
+  height: 200px;
+  padding: 1rem 1rem 1rem 1rem;
+  border-radius: 20px;
+object-fit: cover;
+overflow: hidden;
+
+}
+
+h1{
+  color: #383C4B;
+  font-weight:900;
+  font-size: 2rem;
+  align-self: center;
+}
+
+h2{
+  color:#383C4B;
+  font-weight: 400;
+  margin: 0.5rem;
+}
+h3{
+  margin: 1rem 1rem;
+  align-content: flex-start;
+  color:#383C4B;
+  font-weight: 400;
+}
+
+p{
+  color: #383C4B;
+  font-weight: 200;
+  margin: 0.5rem 0rem 2rem 0rem;
+}
+hr{
+  border: 2px solid #84ACB6;
+  width: 70%;
+  border-radius: 50px;
+  margin: 20px;
+  align-self: center;
+}
+
+
+@media (min-width:0px) and (max-width:767px){
+  nav{
+    display: none;
+  }
+}
+
+/*tablet*/
+ @media (min-width: 768px) and (max-width: 991px) {
+  header{
+    display: flex;
+    justify-content: space-between;
+  }
+  .meny{
+    display: none;
+  }
+  h1{
+    display: none;
+  }
+}
+
+/*desktop*/
+@media (min-width: 992px) {
+  header{
+    display: flex;
+    justify-content: space-between;
+    background-color: red;
+  }
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+@media (min-width: 786px){
+  header{
+    justify-content: space-around;
+  }
+} 
