Changed h3 and added strong in footer

--- a/code/style.css
+++ b/code/style.css
@@ -301,6 +301,14 @@ p {
         margin-left: 10px;
         margin-right: 10px;
     }
+    .header .logo {
+        display: block;
+        float: left;
+        font-size: 35px;
+        padding: 10px 10px;
+        text-decoration: none;
+    }
+    
 }
 
 /* desktop */
