--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,316 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+body {
+  font-family: roboto, sans-serif;
+  color: #E05297;
+  
+  /* ------------------------- BACKGROUND GRADIENT -------------------------------- */
+  
+  background: linear-gradient(80deg,
+  #f1d741, 
+  #f3aeae, 
+  #F6C6EA, 
+  #f5e5b2,
+  #fab2c4,
+  #f397c8,
+  #f5b937
+  );
+
+  /* ---------------------------- ANIMATION -------------------------------- */
+
+  background-size: 600%;
+  animation-name: gradient;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+
+@keyframes gradient {
+  0% {
+      background-position: 0%;
+  }
+  100% {background-position: 100%;}
+}
+
+
+/* ------------------------------ HEADER --------------------------------------- */
+
+.millenial-header {
+  font-size: 60px;
+  color: #FCEEF5;
+  font-family: 'Rampart One', cursive;
+}
+
+
+/* ---------------------------- NAVIGATION BAR ---------------------------------- */
+
+ul {
+  font-family: roboto, sans-serif;
+  max-width: 320px;
+  list-style-type: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+li {
+  float:left;
+}
+
+li a {
+  display: block;
+  color: #FCEEF5;
+  font-family: 'Rampart One', cursive;
+  font-size: 24px;
+  text-align: center;
+  padding: 5px 5px;
+  text-decoration: none;
+}
+
+/* -------------------------- MAIN CONTENT (CONTAINER) -------------------------------- */
+
+.grid-container {
+  color: #E05297;
+  margin-left: 10px;
+  margin-bottom: 30px;
+  width: 280px;
+  display: grid;
+  row-gap: 15px;
+}
+
+/* ---------------------------- NEWS (GRID ITEMS) -------------------------------- */
+
+.grid-item, .grid-item-big {
+  background-color: #FCEEF5;
+  grid-column: span 1;
+  border-radius: 2%;
+  margin-top: none;
+  padding: 2% 10% 10% 10%;
+}
+
+/* ------------------------- TEXTS -------------------------------------------------- */
+
+h1 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 16px;
+}
+
+h4 {
+  font-size: 12px;
+}
+
+p {
+  font-size: 16px;
+  display: inline-block;
+}
+
+/* ---------------------- LINKS -------------------------------------------------- */
+
+a {
+  color: #E36BAE;
+  text-decoration: none;
+}
+
+
+a:hover {
+  text-decoration: underline;
+  
+}
+
+/* -------------------- IMAGES + RIGHTS -------------------------------------------- */
+
+img {
+  filter: grayscale();
+  width: 100%;
+}
+
+.image-rights {
+  font-size: 8px;
+  display: inline-block;
+}
+
+/* ---------------------------------- FOOTER ------------------------------------------- */
+
+.millenial-footer {
+  color: #FCEEF5;
+  font-family: 'Rampart One', cursive;
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+
+/* ------------------------------ MEDIA QUERIES ------------------------------------------- */
+
+
+/* ---------------------------- MEDIUM: TABLET SIZE -------------------------------------- */
+
+@media only screen and (max-width: 1100px) and (min-width: 670px) {
+
+  body {
+      margin-top: 10px;
+      margin-left: 60px;
+  }
+
+  ul {
+      max-width: 1200px;
+      margin-bottom: 30px;
+  }
+
+  li a {
+      font-size: 24px;
+      padding: 15px 12px;
+  }
+
+  .grid-container {
+      width: 600px;
+      grid-template-columns: 4fr 4fr;
+      gap: 15px;
+      margin-bottom: 60px;
+      
+  }
+
+  .millenial-header {
+      font-size: 100px;
+      margin-bottom: 0;
+  }
+  
+  .grid-item, .grid-item-big {
+      
+      border-radius: 2%;
+      font-size: 16px;
+      margin-top: none;
+      padding: 5%;
+  }
+
+  h2 {
+      font-size: 20px;
+  }
+
+  h4 {
+      font-size: 12px;
+  }
+  
+  .millenial-footer {
+      margin-bottom: 50px;
+      font-size: 24px;
+  }
+  
+}
+
+/* ----------------------- LARGE: DESKTOP SIZE -------------------------------- */ 
+
+@media only screen and (max-width: 1600px) and (min-width: 1100px) {
+
+  body {
+      margin-top: 10px;
+      margin-left: 80px;
+  }
+
+  ul {
+      max-width: 1400px;
+      margin-bottom: 30px;
+  }
+
+  li a {
+      font-size: 28px;
+      padding: 20px 20px;
+  }
+
+  .grid-container {
+      width: 800px;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      gap: 20px;
+      margin-bottom: 80px;
+  }
+
+  .millenial-header {
+      font-size: 80px;
+      margin-bottom: 10px;
+  }
+  
+
+  .grid-item {
+      font-size: 18px;
+      padding: 2% 10% 2% 10%;
+  }
+
+  .grid-item-big {
+      padding: 3%;
+      grid-column: span 2;
+  }
+
+  h2 {
+      font-size: 20px;
+  }
+
+  h4 {
+      font-size: 12px;
+  }
+  
+  
+  .millenial-footer {
+      font-size: 26px;
+      margin-bottom: 50px;
+  }
+  
+}
+
+
+/* ----------------------------- EXTRA LARGE: WIDE DESKTOP SIZE ---------------------------- */ 
+
+@media only screen and (min-width: 1400px) {
+
+  body {
+      margin-top: 20px;
+      margin-left: 200px;
+  }
+
+  ul {
+      max-width: 1800px;
+      margin-bottom: 40px;
+  }
+
+  li a {
+      font-size: 26px;
+      padding: 20px 30px;
+  }
+
+  .grid-container {
+      width: 1400px;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      gap: 30px;
+      margin-bottom: 100px;
+  }
+
+  .millenial-header {
+      font-size: 80px;
+      margin-bottom: 10px;
+  }
+  
+  .grid-item-big {
+      grid-column: span 2;
+  }
+
+  .grid-item {
+      font-size: 18px;
+      padding: 2%;
+  }
+
+  h2 {
+      font-size: 24px;
+  }
+
+  h4 {
+      font-size: 14px;
+  }
+  
+
+  .millenial-footer {
+      font-size: 26px;
+      margin-bottom: 100px;
+  }
 }
