--- a/code/style.css
+++ b/code/style.css
@@ -23,19 +23,20 @@ header {
   width: 100%;
 }
 
-.logo-headline, .navigation{
+.logo-headline {
   display: flex;
   align-items: center;
 }
 
-.navigation {
-  display: none;
-}
-
-.navigation-link{
+.navigation{
+  display:none;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.navigation-link {
+  padding: 5px;
 }
 
 h1, h2, h3 {
@@ -55,7 +56,8 @@ h3, a {
 }
 
 h3 {
-  margin-top: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .big-news {
@@ -83,7 +85,7 @@ h3 {
 .news-snippets img {
   object-fit: cover;
   border-radius: 10%;
-  width: 260px;
+  width: 80%;
   height: 200px;
 }
 
@@ -99,7 +101,7 @@ footer {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .navigation {
+  nav {
     display:contents;
   }
 }
@@ -120,9 +122,12 @@ footer {
     border-radius: 10%;
     width: 100%;
     height: auto;
+    max-height: 330px;
   }
 
-  .navigation {
+  nav {
+    display: flex;
+    flex-direction: row;
     display:contents;
   }
 }
