--- a/code/style.css
+++ b/code/style.css
@@ -30,7 +30,6 @@ header {
 
 .navigation{
   display:none;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -82,9 +81,12 @@ h3 {
 }
 
 
-.news-snippets img {
+.news-snippets img, .big-news img {
   object-fit: cover;
   border-radius: 10%;
+}
+
+.news-snippets img {
   width: 80%;
   height: 200px;
 }
@@ -101,8 +103,11 @@ footer {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  nav {
-    display:contents;
+  .navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -125,9 +130,9 @@ footer {
     max-height: 330px;
   }
 
-  nav {
+  .navigation {
     display: flex;
-    flex-direction: row;
-    display:contents;
+    justify-content: center;
+    align-items: center;
   }
 }
