Added new photo,edited html

--- a/code/style.css
+++ b/code/style.css
@@ -34,7 +34,7 @@ nav {
   padding: 5px;
 }
 
-.big-news, .all-events, .music {
+.big-news, .all-events, .all-music {
   display: flex;
   flex-direction: column;
 }
