--- a/code/style.css
+++ b/code/style.css
@@ -41,12 +41,13 @@ a:active {
   color: red;
 }
 
-.navigation a:hover {
+.navigation a:hover, .links a:hover {
 text-decoration: underline;
 color: red;
 }
 
 /* main news */
+
 .big-news {
   display: flex;
   animation: start 2s ease-in-out;
@@ -55,7 +56,7 @@ color: red;
 .big-news-img {
   width: 40%;
   margin-bottom: 10px;
-  box-shadow: 2px 6px 4px rgba(0,0,0, 1);
+  box-shadow: 2px 6px 4px rgba(0,0,0,1);
 }
 
 .big-news-img:hover {
@@ -71,6 +72,7 @@ color: red;
   max-width: 60%;
   text-align: center;
 }
+/*small news */
 
 .container {
   border: 2px solid black;
@@ -113,12 +115,6 @@ footer {
   text-align: center;
 }
 
-
-.links a:hover {
-  text-decoration: underline;
-  color: red;
-}
-
 .top a {
   text-decoration: none;
 }
@@ -140,9 +136,11 @@ footer {
 @keyframes start {
   0% {
       transform: translateX(-1000px);
+      opacity: 0;
   }
   100% {
       transform: translateX(0);
+      opacity: 1;
   }
 }
 
