--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,131 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  font-family: 'Kaisei Opti', serif; /*specific font to use for the whole webpage*/
+  margin: 10px;                      /*overall margin 10px for the whole webpage*/
+}
+
+.top-bar {
+  display: flex;                  
+  justify-content: space-between;  /* put space between two div, top-bar left and top-bar right*/
+}
+
+.left {
+  padding: 10px; 
+  display: flex;
+  align-items: center; 
+}
+
+.logo, .search, .contact {
+  margin: 10px;                   /*put som margin so there's some space between each element*/
+  text-transform: uppercase;      /*tramsform text into uppercase*/
+}
+
+.social-media-icon {
+  border: 1px solid rgb(174, 171, 171);
+  border-radius: 50%;             /*rounded corners*/
+  margin: 5px;                    /*space between each icon*/
+  padding: 5px;                   /*space between icon and the border*/
+  height: 35px;
+  width: 35px;
+  display: flex;
+  align-items: center;            /*center the content, vertically*/
+  justify-content: center;        /*center the content, horizontally*/
+}
+
+/*if we want to have normal links with text decoration and different color, we can specify each link. 
+For example if we want different color for the link "contact", we can write .contact a {} and so on. */
+a {                                 /*all links will have no text decoration och have the color black*/
+  text-decoration: none;
+  color: black;
+}
+
+a:visited {                         /*for visited links, the color will remain black*/
+  color: black;
+}
+
+.right {
+  padding: 10px;
+  display: flex;
+  align-items: center; 
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-image: url("./background.jpg");          /*put a background image for the header*/
+  background-repeat: no-repeat;                       /*do not want to repet the image, vertically and horizontally*/
+  background-size: cover;                             /*image is going to fill the container, as large as possible. image can be strethed*/
+}
+
+.title, .header-2{
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.header-2 {
+  font-style: italic;
+  font-size: 20px;
+}
+
+.date {
+  font-size: 15px;
+}
+
+.navbar {
+  background-color: white;              /*set the backgrpund-color to white because when scrolling I don't want it to be transparent*/
+  border-top: 1px solid black;          /*instead of using <hr/>*/
+  border-bottom: 1px solid black;       /*instead of using <hr/>*/
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: sticky;                       /*keep the elements positioned according to the normal flow*/           
+  top: 0;                                 /*want the navbar to be postioned at the top of the page*/
+  z-index: 999;                           /*want the navbar to be in the front, not in the background*/
+}
+
+.link {
+  width: 80px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.link:hover {
+  background-color: rgb(229, 229, 229);   /*when hovering the links in the navbar, changes the background color*/
+}
+
+.all-news {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;   /*tried out with grid instead of using flex with 4fr*/  
+  grid-gap: 5px;                           /*gap between each columns*/
+  margin: 0 0 5px 0;                        /*put only margin at the bottom, so there's some space between news cards and the footer*/                      
+}
+
+.big-news {
+  grid-column: span 2;         /*the first news takes up 2 columns each*/
+  font-size: 25px;
+  padding: 10px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  box-shadow: 5px 5px 5px rgb(229, 229, 229);     /*the higher number, the shadow will be more blurred*/
+}
+
+.other-news {
+  border: 2px solid rgb(229, 229, 229);
+  grid-column: span 1;           /*each news takes up 1 column*/
+  padding: 10px;
+}
+
+.big-news img {
+  object-fit: cover;              /*image is going to fill the container, as large as possible. image can be strethed*/
+  width: 100%;
+}
+
+.other-news img {
+  object-fit: contain;            /*fill the container as large as possible without cropping or stretching the image*/
+  width: 100%;
+  max-height: 150px;              /*defined a max height so the images do not go outside of the container*/
 }
