--- a/style.css
+++ b/style.css
@@ -839,7 +839,7 @@ padding-bottom: -0.2%;
   .container-nav {
     justify-content: center;
     align-content: center;
-    margin-top: -1%;
+    margin: -1% -0 0 -1%;
     
   }
 
